[workspace]
members = [
  "01_02_why_async",
  "01_04_async_await_primer",
  "02_02_future_trait",
  "02_03_timer",
  "02_04_executor",
  "03_01_async_await",
  "05_01_streams",
  "05_02_iteration_and_concurrency",
  "06_02_join",
  "06_03_select",
  "06_05_futuresunordered",
  "07_05_recursion",
  "09_01_sync_tcp_server",
  "09_02_async_tcp_server",
  "09_03_slow_request",
  "09_04_concurrent_tcp_server",
  "09_05_final_tcp_server",
]
